src/test/ui/macros/issue-39404.stderr
error: missing fragment specifier
  --> $DIR/issue-39404.rs:3:19
   |
LL | macro_rules! m { ($i) => {} }
   |                   ^^

error: aborting due to previous error

